Fix y-scrollbars to always be below navbar (not to side)

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -79,7 +79,7 @@ ul {
     right: 0;
     left: 0;
     padding: 10px 0;
-    overflow-y: scroll;
+    overflow-y: auto;
     display: block;
     background-color: hsl(0,0%,100%);
     z-index: 90;
