--- a/src/features/subreddit/Subreddit.css
+++ b/src/features/subreddit/Subreddit.css
@@ -1,6 +1,10 @@
 .subreddit-page {
-    position: relative;
+    position: absolute;
     top: 50px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow-y: auto;
 }
 
 .subreddit-page>header {
